03-platform/releases/oauth2/middlewares.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: auth
  namespace: oauth2-proxy
spec:
  forwardAuth:
    address: "http://oauth2-proxy.oauth2-proxy.svc.cluster.local/oauth2/auth"
    trustForwardHeader: true
    authResponseHeaders:
      - "X-Auth-Request-User"
      - "X-Auth-Request-Email"
      - "X-Auth-Request-Access-Token"
      - "Authorization"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: errors
  namespace: oauth2-proxy
spec:
  errors:
    status:
      - "401"
    service:
      name: oauth2-proxy
      port: 80
    query: "/oauth2/sign_in?rd={url}"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-auth-headers
  namespace: oauth2-proxy
spec:
  headers:
    customRequestHeaders:
      X-Auth-Request-User: ""
      X-Auth-Request-Email: ""
      X-Auth-Request-Access-Token: ""
